@@ -6,6 +6,7 @@ v0.6.1
 - Just Select Widget method
 - [aqab0N] Unicode fix
 - Ability to restore deleted shortcut via 308
+- Global override adjustments
 
 v0.6.0
 - Version bump for Isengard repo.
